# PluginPlayer

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  genindex.html  index.html  introductory.html  kivyintro.html  multi_sectioned.kv  node_manager.py  node_widget.py  node_widget_manager.py  objects.inv  plugin_manager.py  plugin_player.py  plugin_player_setup.kv  py-modindex.html  search.html  searchindex.js  tree_manager.py  utility_manager.py
.github/: .licenserc.yaml
.github/workflows/: merge.yaml  pull_request.yaml
_sources/: index.rst.txt  kivyintro.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/pluginplayer/: index.rst.txt
_sources/autoapi/pluginplayer/node_manager/: index.rst.txt
_sources/autoapi/pluginplayer/node_widget/: index.rst.txt
_sources/autoapi/pluginplayer/node_widget_manager/: index.rst.txt
_sources/autoapi/pluginplayer/plugin_manager/: index.rst.txt
_sources/autoapi/pluginplayer/plugin_player/: index.rst.txt
_sources/autoapi/pluginplayer/run_manager/: index.rst.txt
_sources/autoapi/pluginplayer/tree_manager/: index.rst.txt
_sources/autoapi/pluginplayer/utility_manager/: index.rst.txt
autoapi/: index.html
autoapi/pluginplayer/: index.html
autoapi/pluginplayer/node_manager/: index.html
autoapi/pluginplayer/node_widget/: index.html
autoapi/pluginplayer/node_widget_manager/: index.html
autoapi/pluginplayer/plugin_manager/: index.html
autoapi/pluginplayer/plugin_player/: index.html
autoapi/pluginplayer/run_manager/: index.html
autoapi/pluginplayer/tree_manager/: index.html
autoapi/pluginplayer/utility_manager/: index.html
docs/: Makefile  requirements.txt
docs/doctrees/: environment.pickle  index.doctree  introductory.doctree  kivyintro.doctree  nodewidgetmanager.doctree  pluginmanager.doctree  terminology.doctree  treemanager.doctree  utilitymanager.doctree
docs/html/: .buildinfo  genindex.html  index.html  introductory.html  kivyintro.html  nodewidgetmanager.html  objects.inv  pluginmanager.html  search.html  searchindex.js  treemanager.html  utilitymanager.html
docs/html/_sources/: index.rst.txt  nodewidgetmanager.rst.txt  terminology.rst.txt
docs/source/: conf.py  index.rst  introductory.rst  kivyintro.rst  nitpick_exceptions  pluginmanager.rst  terminology.rst  treemanager.rst  utilitymanager.rst
src/: node_manager.py  node_widget.py  node_widget_manager.py  plugin_manager.py  plugin_player.py  tree_manager.py
src/pluginplayer/: node_manager.py  node_widget.py  node_widget_manager.py  plugin_manager.py  plugin_player.py  plugin_player_setup.kv  run_manager.py  tree_manager.py  utility_manager.py
tests/: pluginplayer_shell.py  test_nodemanager.py  test_pluginmanager.py  test_pluginplayer.py  test_runmanager.py  test_treemanager.py  test_utility_manager.py  test_utilitymanager.py
tests/pluginplayer_examples/: export_pluginplayer_examples.cpp  load_modules.cpp  load_modules.hpp  modules.hpp  multiplier.hpp  multiplyby1.cpp  multiplyby2.cpp  multiplybysubmods.cpp  test_pluginplayer_examples.py  twos_multiplier.py
tests/python/: test_pluginplayer.py
